--- a/style.css
+++ b/style.css
@@ -64,3 +64,16 @@
     position: relative;
     z-index: 10;
 }
+
+.text a
+{
+    display: inline-block;
+    font-size: 1em;
+    background: #fff;
+    padding: 03px 15px;
+    text-decoration: none;
+    color: #111;
+    margin-top: 10px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+}
